# elasty

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  format.sh
.github/workflows/: clang-format.sh  clang-format.yml  macos.yml  ubuntu.yml
assets/: torus.mesh
examples/aerodynamics/: main.cpp
examples/cloth-alembic/: main.cpp
examples/explicit-2d/: main.cpp
examples/interactive-app/: main.cpp
examples/pbd-xpbd-comparison/: main.cpp
examples/simple/: main.cpp
examples/variational-implicit-2d/: main.cpp
examples/variational-implicit-3d/: main.cpp  mesh.hpp
include/elasty/: alembic-manager.hpp  algorithm-type.hpp  cloth-sim-object.hpp  constraint.hpp  elasty.hpp  engine.hpp  fem.hpp  particle.hpp  sim-object.hpp  utils.hpp
src/: alembic-manager.cpp  cloth-sim-object.cpp  constraint.cpp  elasty.cpp  engine.cpp  utils.cpp
tests/: constraint-test.cpp  fem-test.cpp  test-bending-constraint.cpp
